--- a/.github/workflows/ros-deb-builder.yml
+++ b/.github/workflows/ros-deb-builder.yml
@@ -13,6 +13,10 @@ jobs:
     runs-on: ubuntu-22.04
 
     steps:
+      - run: |
+          sudo apt install -y cmake
+          cmake --version
+
       - uses: jspricke/ros-deb-builder-action@main
         with:
           ROS_DISTRO: humble
