--- a/.github/workflows/ros-deb-builder.yml
+++ b/.github/workflows/ros-deb-builder.yml
@@ -39,6 +39,9 @@ jobs:
           pwd
           tree
 
+      - run: |
+          usermod --add-subuids 100000-165535 --add-subgids 100000-165535 $(whoami)
+
       - uses: christianrauch/ros-deb-builder-action@network
         with:
           ROS_DISTRO: humble
