--- a/.github/workflows/ros-deb-builder.yml
+++ b/.github/workflows/ros-deb-builder.yml
@@ -29,7 +29,7 @@ jobs:
           apt install -y sudo
           sudo apt install -y cmake
           cmake --version
-          # sudo apt install -y nvidia-cuda-dev
+          sudo apt install -y nvidia-cuda-toolkit
           sudo apt install -y tree curl lsb-release software-properties-common
 
       - name: free up space
